# openair-cn-cups

./: Makefile  README.md
.devcontainer/: devcontainer.json
configs/: config-spgwu-interface.sh  docker-container.yml
docker/: Dockerfile
etc/: spgw_u-dev.conf
src/common/: CMakeLists.txt  logger.hpp
src/gtpv1u/: gtpv1u.cpp
src/itti/: itti.cpp  itti.hpp
src/oai_spgwu/: CMakeLists.txt
src/spgwu/: CMakeLists.txt
src/spgwu/interfaces/: CMakeLists.txt  ForwardingActionRulesImpl.cpp  ForwardingActionRulesImpl.h  PacketDetectionRulesImpl.cpp  PacketDetectionRulesImpl.h  RulesUtilitiesImpl.cpp  SessionBpfImpl.cpp  SessionBpfImpl.h
src/spgwu/simpleswitch/: CMakeLists.txt  pfcp_pdr.hpp  pfcp_session.cpp  pfcp_session.hpp  pfcp_switch.cpp  pfcp_switch.hpp  spgwu_s1u.cpp
test/integration/: CMakeLists.txt  gtpu_l4_stack_test.cpp  gtpu_l4_stack_test.hpp  packet_stats.cpp  packet_stats.hpp  spgwuTests.cpp  spgwu_tests.cpp  spgwu_tests_utils.hpp
